<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">Flamingos</string>

	<string name="activity_sample_code">Flamingo</string>

	<!-- =============================== -->
	<!--  ReportLayout.java/xml Strings  -->
	<!-- =============================== -->

	<string name="take_picture">Take Picture</string>
	<string name="lower_bound">Lower Estimate</string>
	<string name="higher_bound">Higher Estimate</string>
	<string name="agreed_estimate">Final Estimate</string>

	<string name="camera">Take Photo</string>
	<string name="getgeodata">Get Geo Data</string>

	<string name="proceed">Save and Continue</string>

	<!-- =============================== -->
	<!--  ReviewLayout.java/xml Strings  -->
	<!-- =============================== -->

    <string name="no_report">No Reports Recorded</string>
    
    <!-- =============================== -->
	<!--  Settings.java/xml Strings  -->
	<!-- =============================== -->
    
	<string name="accelerometer">Accelerometer</string>

	<string name="accuracy_unknown">Accuracy: Unknown</string>
	<string name="accuracy_unreliable">Accuracy: Unreliable</string>
	<string name="accuracy_low">Accuracy: Low</string>
	<string name="accuracy_medium">Accuracy: Medium</string>
	<string name="accuracy_high">Accuracy: High</string>

	<string name="no_accelerometer">Accelerometer not found on this device.</string>
	<string name="sensor_list">Sensor List</string>

	<string name="calibrate">Calibrate</string>
	
	
	
	<!-- Strings from OpenDataKit -->
	<!--
		Copyright (C) 2009 University of Washington Licensed under the Apache
		License, Version 2.0 (the "License"); you may not use this file except
		in compliance with the License. You may obtain a copy of the License
		at http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->

	<string name="accept_location">Record Location</string>
<string name="accuracy">Accuracy</string>
<string name="trigger">OK. Please continue.</string>
<string name="add_another">Add Group</string>
<string name="add_another_repeat">Add another \"%s\" group?</string>
<string name="add_file">Add Selected File(s)</string>
<string name="add_repeat">Add a new \"%s\" group?</string>
<string name="add_repeat_no">Do Not Add</string>
<string name="altitude">Altitude</string>
<string name="audio_file_error">No audio file was specified.</string>
<string name="audio_file_invalid">File: %s is not a valid audio file.</string>
<string name="audio_file_missing">Audio File: %s is missing.</string>
<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
<string name="cancel">Cancel</string>
<string name="cancel_loading_form">Stop Loading</string>
<string name="cancel_location">Do Not Record</string>
<string name="cancel_saving_form">Stop Saving</string>
<string name="capture_audio">Record Sound</string>
<string name="capture_image">Take Picture</string>
<string name="capture_video">Record Video</string>
<string name="change_language">Change Language</string>
<string name="change_password">Change Password</string>
<string name="change_server">Change Server</string>
<string name="change_user">Change Username</string>
<string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
<string name="clear_answer">Remove Response</string>
<string name="clear_answer_ask">Remove This Response?</string>
<string name="clear_answer_no">Do Not Remove</string>
<string name="collapsed_group">Collapsed Group</string>
<string name="completed_data">Complete (%s)</string>
<string name="continue_form">Do Not Exit</string>
<string name="data">Data</string>
<string name="data_saved_error">Sorry, data save failed!</string>
<string name="data_saved_ok">Data successfully saved!</string>
<string name="default_server">http://opendatakit.appspot.com</string>
<string name="delete_confirm">Delete %s item(s)?</string>
<string name="delete_file">Delete Selected</string>
<string name="delete_no">Do Not Delete</string>
<string name="delete_repeat">Remove Group</string>
<string name="delete_repeat_ask">Remove This Group?</string>
<string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
<string name="delete_repeat_no">Do Not Remove</string>
<string name="delete_yes">Delete Items</string>
<string name="discard_answer">Remove Response</string>
<string name="discard_group">Remove Group</string>
<string name="download">Get Selected</string>
<string name="downloading_data">Connecting to Server</string>
<string name="download_all_successful">All forms downloaded successfully.</string>
<string name="download_complete">Form Get Complete</string>
<string name="download_failed_with_error">Form \"%s\" failed. %s.</string>
<string name="download_some_failed">Sorry, %s form(s) not downloaded!</string>
<string name="do_not_change">Do Not Change</string>
<string name="do_not_exit">Do Not Exit</string>
<string name="do_not_save">Discard Changes And Exit</string>
<string name="enter">enter</string>
<string name="entering_repeat">Add Group</string>
<string name="entering_repeat_ask">Add New Group?</string>
<string name="enter_data">Start New Form</string>
<string name="enter_data_button">Start New Form (%s)</string>
<string name="enter_data_description">%s has been selected.</string>
<string name="enter_data_message">To navigate, swipe your finger horizontally on the screen as if turning pages in a book. Press the Menu button for more choices.</string>
<string name="entry_exit_confirm">Exiting now will discard unsaved changes.</string>
<string name="error_downloading">Error Getting Form</string>
<string name="expanded_group">Expanded Group</string>
<string name="fetching_file">"Getting \"%s\".\n\nForm %s of %s form(s)..."</string>
<string name="file_deleted_error">Sorry, %s item(s) failed to delete!</string>
<string name="file_deleted_ok">%s item(s) successfully deleted!</string>
<string name="file_download_error">File %s failed. %s</string>
<string name="finalize_for_send">Save As Complete</string>
<string name="form">Form</string>
<string name="forms">Forms</string>
<string name="form_path">Form Path: /</string>
<string name="form_renamed">%s was renamed %s.</string>
<string name="getting_location">Loading Location...</string>
<string name="get_barcode">Get Barcode</string>
<string name="get_forms">Get New Forms</string>
<string name="get_location">Record Location</string>
<string name="goto_previous_level">Go to previous level</string>
<string name="gps_disabled_error">Sorry, GPS is disabled!</string>
<string name="group_contains">Contains %s items</string>
<string name="image_file_error">No image file was specified.</string>
<string name="image_file_invalid">File: %s is not a valid image file.</string>
<string name="image_file_missing">Image File: %s is missing.</string>
<string name="invalid_answer_error">Sorry, this response is invalid!</string>
<string name="jump_to_beginning">Go To Start</string>
<string name="jump_to_end">Go To End</string>
<string name="jump_to_previous">Go Up</string>
<string name="latitude">Latitude</string>
<string name="leave_repeat_yes">Do Not Add</string>
<string name="leaving_repeat">Add Group</string>
<string name="leaving_repeat_ask">And One More Group?</string>
<string name="list_failed_with_error">Form listing failed. %s.</string>
<string name="loading_form">Loading Form...</string>
<string name="load_error">Sorry, unable to load form %s</string>
<string name="load_remote_form_error">Error Getting Form List</string>
<string name="local_files">Local</string>
<string name="location_accuracy">Accuracy is %s meters.</string>
<string name="longitude">Longitude</string>
<string name="main_menu">Main Menu</string>
<string name="main_menu_details">Magnifying human resources with technology</string>
<string name="main_menu_message">ODK Collect v1.1.5</string>
<string name="manage_files">Manage Forms And Data</string>
<string name="mark_finished">Mark Data as Finished</string>
<string name="no">No</string>
<string name="noselect_error">Sorry, you have not selected any items!</string>
<string name="no_capture">Nothing recorded yet.</string>
<string name="no_items_display">Nothing available to display.</string>
<string name="no_items_error">Nothing available to %s!</string>
 <string name="no_sd_error">Sorry, your memory card is not working!</string>
<string name="ok">OK</string>
<string name="one_capture">Multimedia recorded.</string>
<string name="password">Password</string>
<string name="play_audio">Play Sound</string>
<string name="play_video">Play Video</string>
<string name="please_wait">Please wait a few moments.</string>
<string name="quit_application">Exit Without Saving?</string>
<string name="quit_entry">Save Data And Exit</string>
<string name="refresh">Refresh</string>
<string name="remote_files">Remote</string>
<string name="replace_audio">Replace Sound</string>
<string name="replace_barcode">Replace Barcode</string>
<string name="replace_image">Replace Picture</string>
<string name="replace_location">Replace Location</string>
<string name="replace_video">Replace Video</string>
<string name="required_answer_error">Sorry, this response is required!</string>
<string name="review">review</string>
<string name="review_data">Continue Saved Form</string>
<string name="review_data_button">Continue Saved Form (%s)</string>
<string name="saved_data">Incomplete (%s)</string>
<string name="save_all_answers">Save Data</string>
<string name="save_data_message">Please save data to keep your responses.</string>
<string name="save_enter_data_description">You have reached the end of %s.</string>
<string name="save_for_later">Save As Incomplete </string>
<string name="saving_form">Saving Form...</string>
<string name="select_repeat">Select to see repeated element: </string>
<string name="send">send</string>
<string name="sending_items">Sending %s of %s item(s)"</string>
<string name="send_data">Send Finished Data</string>
<string name="send_data_button">Send Finished Data (%s)</string>
<string name="send_selected_data">Send Selected</string>
<string name="server">Server</string>
<string name="server_preferences">Server Preferences</string>
<string name="toggle_selected">Toggle All</string>
<string name="uploading_data">Sending Data</string>
<string name="upload_all_successful">%s item(s) sent successfully.</string>
<string name="upload_some_failed">Sorry, %s item(s) failed to send!</string>
<string name="url_error">Sorry, invalid URL!</string>
<string name="username">Username</string>
<string name="view_hierarchy">Go To Prompt</string>
<string name="yes">Yes</string>

</resources>